force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <description>Signature Field</description>
    <inlineHelpText>Signature Field</inlineHelpText>
    <label>Signed</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>