force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Standard_Start_Time_AM_or_PM__c.field-meta.xml
<CustomField>
    <fullName>Standard_Start_Time_AM_or_PM__c</fullName>
    <description>What time did the employer designate?</description>
    <inlineHelpText>What time did the employer designate?</inlineHelpText>
    <label>Standard Start Time AM or PM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>