force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Taken_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DIR Employee who took report</description>
    <inlineHelpText>DIR Employee who took report</inlineHelpText>
    <label>Taken By</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipName>Reports_of_Labor_Code_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>