force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>