force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <description>What kind of business is this (Agriculture? Garment? Service?)</description>
    <inlineHelpText>What kind of business is this (Agriculture? Garment? Service?)</inlineHelpText>
    <label>Type of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>