force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Type_of_Reporting_Party__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Reporting_Party__c</fullName>
    <description>Different entities may have different roles within a case. This defines the type this entity plays on this RLCV</description>
    <inlineHelpText>Select what role this Reporting Party plays in this RLCV.</inlineHelpText>
    <label>Type of Reporting Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>