force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Union_Contract__c.field-meta.xml
<CustomField>
    <fullName>Union_Contract__c</fullName>
    <description>Is there a union contract?</description>
    <inlineHelpText>Is there a union contract?</inlineHelpText>
    <label>Union Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>