force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Units_for_Piece_Rate_Payment__c.field-meta.xml
<CustomField>
    <fullName>Units_for_Piece_Rate_Payment__c</fullName>
    <description>Specifies the units for when employees are paid per piece rate. Amount per unit is specified in separate field.</description>
    <inlineHelpText>Specifies the units for when employees are paid per piece rate. Amount per unit is specified in separate field.</inlineHelpText>
    <label>Units for Piece Rate Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>