force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Unpaid_Overtime_Violations__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Overtime_Violations__c</fullName>
    <description>Suspected Violations of Employer - Unpaid overtime</description>
    <label>Unpaid Overtime Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Over 8 hours/day or (10 hours/day-farm)</fullName>
            </value>
            <value>
                <fullName>Weekly worked over 40 hours/week</fullName>
            </value>
            <value>
                <fullName>Double time for over 12 hours/day</fullName>
            </value>
            <value>
                <fullName>Working on the 7th consecutive days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>