force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Unregistered_Janitorial_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Janitorial_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unregistered Janitorial Contractor</label>
    <type>Checkbox</type>
</CustomField>