force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Update_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Update_Parent_Case__c</fullName>
    <description>Hidden Field to Update Parent Case</description>
    <inlineHelpText>Hidden Field to Update Parent Case</inlineHelpText>
    <label>Update Parent Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Litigation</fullName>
            </value>
            <value>
                <fullName>New AutoRefer</fullName>
            </value>
            <value>
                <fullName>New TBR</fullName>
            </value>
            <value>
                <fullName>Screened / Pending Unit Review</fullName>
            </value>
            <value>
                <fullName>Cure Dispute</fullName>
            </value>
            <value>
                <fullName>Under PAGA Investigation</fullName>
            </value>
            <value>
                <fullName>In Litigation</fullName>
            </value>
            <value>
                <fullName>Settlement Pending</fullName>
            </value>
            <value>
                <fullName>Order / Judgement Received</fullName>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
            </value>
            <value>
                <fullName>Waiting for Penalty</fullName>
            </value>
            <value>
                <fullName>Partial Payment Received</fullName>
            </value>
            <value>
                <fullName>Judgement on Appeal</fullName>
            </value>
            <value>
                <fullName>Close Case Review</fullName>
            </value>
            <value>
                <fullName>Closed by PAGA</fullName>
            </value>
            <value>
                <fullName>Requires Manual Screening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>