force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_30_minute_off_duty_meal_period__c.field-meta.xml
<CustomField>
    <fullName>Violation_30_minute_off_duty_meal_period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>30-minute off-duty meal period not provided by the end of the 5th hour of work</description>
    <inlineHelpText>30-minute off-duty meal period not provided by the end of the 5th hour of work</inlineHelpText>
    <label>No 30-minute off-duty meal period</label>
    <type>Checkbox</type>
</CustomField>