force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Asked_employee_to_pay_back__c.field-meta.xml
<CustomField>
    <fullName>Violation_Asked_employee_to_pay_back__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asked employee to pay back wages paid</description>
    <inlineHelpText>Asked employee to pay back wages paid</inlineHelpText>
    <label>Asked employee to pay back wages paid</label>
    <type>Checkbox</type>
</CustomField>