force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Daily_time_records_arent_kept__c.field-meta.xml
<CustomField>
    <fullName>Violation_Daily_time_records_arent_kept__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Daily time records are not kept or inaccurate</description>
    <inlineHelpText>Daily time records are not kept or inaccurate</inlineHelpText>
    <label>Daily time records are not kept</label>
    <type>Checkbox</type>
</CustomField>