force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_For_work_days_between_10_and14__c.field-meta.xml
<CustomField>
    <fullName>Violation_For_work_days_between_10_and14__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For work days of more than 10 hours and up to 14 hours per day, not allowed to take three 10-minute rest breaks</description>
    <inlineHelpText>For work days of more than 10 hours and up to 14 hours per day, not allowed to take three 10-minute rest breaks</inlineHelpText>
    <label>For work days between 10 and 14 hours</label>
    <type>Checkbox</type>
</CustomField>