force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Illegal_charges_for_cash__c.field-meta.xml
<CustomField>
    <fullName>Violation_Illegal_charges_for_cash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Illegal charges for cash shortages, breakage, or loss of equipment</description>
    <inlineHelpText>Illegal charges for cash shortages, breakage, or loss of equipment</inlineHelpText>
    <label>Illegal charges for cash shortages</label>
    <type>Checkbox</type>
</CustomField>