force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Meal_period_less_than_30__c.field-meta.xml
<CustomField>
    <fullName>Violation_Meal_period_less_than_30__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meal period provided but less than 30 minutes</description>
    <inlineHelpText>Meal period provided but less than 30 minutes</inlineHelpText>
    <label>Meal period provided but less than 30min</label>
    <type>Checkbox</type>
</CustomField>