force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Minor_s_work_excessive__c.field-meta.xml
<CustomField>
    <fullName>Violation_Minor_s_work_excessive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Minor(s) work excessive or prohibited hours</description>
    <inlineHelpText>Minor(s) work excessive or prohibited hours</inlineHelpText>
    <label>Minor(s) excess./prohib. hours</label>
    <type>Checkbox</type>
</CustomField>