force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_No_notice_to_new_hires__c.field-meta.xml
<CustomField>
    <fullName>Violation_No_notice_to_new_hires__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No notice to new hires (under Labor Code Section 2810.5)</description>
    <inlineHelpText>No notice to new hires (under Labor Code Section 2810.5)</inlineHelpText>
    <label>No notice to new hires Labor Code 2810.5</label>
    <type>Checkbox</type>
</CustomField>