force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_No_premium_pay_for_missing_mea__c.field-meta.xml
<CustomField>
    <fullName>Violation_No_premium_pay_for_missing_mea__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No premium pay for missing meal or rest periods.</description>
    <inlineHelpText>No premium pay for missing meal or rest periods.</inlineHelpText>
    <label>No premium pay for missing meal or rest</label>
    <type>Checkbox</type>
</CustomField>