force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_No_split_shift_premium_pay__c.field-meta.xml
<CustomField>
    <fullName>Violation_No_split_shift_premium_pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No split shift premium pay</description>
    <inlineHelpText>No split shift premium pay</inlineHelpText>
    <label>No split shift premium pay</label>
    <type>Checkbox</type>
</CustomField>