force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_No_valid_work_permit_s__c.field-meta.xml
<CustomField>
    <fullName>Violation_No_valid_work_permit_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No valid work permit(s)</label>
    <type>Checkbox</type>
</CustomField>