force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Not_paid_at_all_for_overtime__c.field-meta.xml
<CustomField>
    <fullName>Violation_Not_paid_at_all_for_overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not paid at all for overtime hours worked</description>
    <inlineHelpText>Not paid at all for overtime hours worked</inlineHelpText>
    <label>Not paid at all for overtime hours worke</label>
    <type>Checkbox</type>
</CustomField>