force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Not_paid_OT_for_working_7th__c.field-meta.xml
<CustomField>
    <fullName>Violation_Not_paid_OT_for_working_7th__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not paid overtime for working on the 7th consecutive workday in a workweek</description>
    <inlineHelpText>Not paid overtime for working on the 7th consecutive workday in a workweek</inlineHelpText>
    <label>Not paid OT for working 7th consecutive</label>
    <type>Checkbox</type>
</CustomField>