force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Not_Paid_OT_Over_40_Hours__c.field-meta.xml
<CustomField>
    <fullName>Violation_Not_Paid_OT_Over_40_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not paid weekly overtime for hours worked over 40 hours per week</description>
    <inlineHelpText>Not paid weekly overtime for hours worked over 40 hours per week</inlineHelpText>
    <label>Not Paid OT Over 40 Hours</label>
    <type>Checkbox</type>
</CustomField>