force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Not_Paid_OT_Over_8_hours__c.field-meta.xml
<CustomField>
    <fullName>Violation_Not_Paid_OT_Over_8_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not paid daily overtime for hours worked over 8 per day (or 10 hours per day for farmworkers)</description>
    <inlineHelpText>Not paid daily overtime for hours worked over 8 per day (or 10 hours per day for farmworkers)</inlineHelpText>
    <label>Not Paid OT Over 8 hours</label>
    <type>Checkbox</type>
</CustomField>