force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Paid_below_minimum_wage__c.field-meta.xml
<CustomField>
    <fullName>Violation_Paid_below_minimum_wage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Paid below minimum wage</description>
    <inlineHelpText>Paid below minimum wage</inlineHelpText>
    <label>Paid below minimum wage</label>
    <type>Checkbox</type>
</CustomField>