force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Paid_check_cash_WO_itemize__c.field-meta.xml
<CustomField>
    <fullName>Violation_Paid_check_cash_WO_itemize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Paid by check or cash without an itemized wage deduction statement</description>
    <inlineHelpText>Paid by check or cash without an itemized wage deduction statement</inlineHelpText>
    <label>Paid by check or cash without an itemize</label>
    <type>Checkbox</type>
</CustomField>