force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Paycheck_issued_with_ISF__c.field-meta.xml
<CustomField>
    <fullName>Violation_Paycheck_issued_with_ISF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Paycheck issued with insufficient funds</description>
    <inlineHelpText>Paycheck issued with insufficient funds</inlineHelpText>
    <label>Paycheck issued with insufficient funds</label>
    <type>Checkbox</type>
</CustomField>