force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Rate_compensation_not_posted__c.field-meta.xml
<CustomField>
    <fullName>Violation_Rate_compensation_not_posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rate of compensation not posted (for farmworkers only)</description>
    <inlineHelpText>Rate of compensation not posted (for farmworkers only)</inlineHelpText>
    <label>Rate of compensation not posted</label>
    <type>Checkbox</type>
</CustomField>