force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Unlicensed_const_contractor__c.field-meta.xml
<CustomField>
    <fullName>Violation_Unlicensed_const_contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unlicensed construction contractor</description>
    <inlineHelpText>Unlicensed construction contractor</inlineHelpText>
    <label>Unlicensed construction contractor</label>
    <type>Checkbox</type>
</CustomField>