force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Violation_Unregistered_car_wash__c.field-meta.xml
<CustomField>
    <fullName>Violation_Unregistered_car_wash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unregistered car wash</description>
    <inlineHelpText>Unregistered car wash</inlineHelpText>
    <label>Unregistered car wash</label>
    <type>Checkbox</type>
</CustomField>