force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Wage_Claim__c.field-meta.xml
<CustomField>
    <fullName>Wage_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wage Claim that referred this RLLV</description>
    <inlineHelpText>Wage Claim that referred this RLLV</inlineHelpText>
    <label>Wage Claim</label>
    <referenceTo>Wage_Claim__c</referenceTo>
    <relationshipLabel>Reports of Labor Law Violations</relationshipLabel>
    <relationshipName>Reports_of_Labor_Law_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>