force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Warehouse_Dist_Ctr_Meal_Period__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Dist_Ctr_Meal_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Warehouse Distribution Center: quota prevents compliance with meal period.</description>
    <label>Warehouse Dist Ctr - Meal Period</label>
    <type>Checkbox</type>
</CustomField>