force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Warehouse_Dist_Ctr_Other__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Dist_Ctr_Other__c</fullName>
    <description>Warehouse Distribution Center - Other (briefly explain):</description>
    <label>Warehouse Dist Ctr - Other</label>
    <type>TextArea</type>
</CustomField>