force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/WCA_Senior_Deputy__c.field-meta.xml
<CustomField>
    <fullName>WCA_Senior_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>F0009: WCA Senior Deputy on referral</description>
    <inlineHelpText>F0009: WCA Senior Deputy on referral</inlineHelpText>
    <label>WCA Senior Deputy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reports_of_Labor_Law_Violations1</relationshipName>
    <type>Lookup</type>
</CustomField>