force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Wednesday_Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Total_Hours_Worked__c</fullName>
    <label>Wednesday Total Hours Worked</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>