force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/What_day_is_pay_day_interval__c.field-meta.xml
<CustomField>
    <fullName>What_day_is_pay_day_interval__c</fullName>
    <description>What day is Pay Day? This field specifies the interval. A separate field will collect specifics.</description>
    <inlineHelpText>What day is Pay Day? This field specifies the interval. A separate field will collect specifics.</inlineHelpText>
    <label>What day is pay day? (interval)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly On</fullName>
            </value>
            <value>
                <fullName>Monthly On</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly On (Once every two weeks)</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly On (Twice a month)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>