force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Worker_s_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>F0649: Worker's Compensation Violation</description>
    <inlineHelpText>F0649: Worker's Compensation Violation</inlineHelpText>
    <label>Worker's Compensation</label>
    <type>Checkbox</type>
</CustomField>