force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Your_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Your_Employment_Status__c</fullName>
    <description>What is your employment status with this employer?</description>
    <inlineHelpText>What is your employment status with this employer?</inlineHelpText>
    <label>Your Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quit</fullName>
            </value>
            <value>
                <fullName>Fired</fullName>
            </value>
            <value>
                <fullName>Still Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>