force-app/main/default/objects/Report_of_Labor_Code_Violation__c/recordTypes/BOFE_RLLV.recordType-meta.xml
<RecordType>
    <fullName>BOFE_RLLV</fullName>
    <active>true</active>
    <label>BOFE RLLV</label>
</RecordType>