force-app/main/default/objects/Report_of_Labor_Code_Violation__c/recordTypes/PAGA_Notice.recordType-meta.xml
<RecordType>
    <fullName>PAGA_Notice</fullName>
    <active>true</active>
    <description>7-15: PAGA Notice</description>
    <label>PAGA Notice</label>
</RecordType>