force-app/main/default/objects/Report_of_Labor_Code_Violation__c/validationRules/CovidReferralOther_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>CovidReferralOther_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Covid_Referral_Other_Reason__c ) ,INCLUDES(Covid_Referral_Reason__c , 'Other'))</errorConditionFormula>
    <errorDisplayField>Covid_Referral_Other_Reason__c</errorDisplayField>
    <errorMessage>Please enter a reason</errorMessage>
</ValidationRule>