force-app/main/default/objects/Report_of_Labor_Code_Violation__c/validationRules/Require_RLCV_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_RLCV_Source</fullName>
    <active>false</active>
    <description>Require RLCV Source</description>
    <errorConditionFormula>ISBLANK (TEXT(Source__c ))</errorConditionFormula>
    <errorDisplayField>Source__c</errorDisplayField>
    <errorMessage>You must complete the Source of the RLLV.</errorMessage>
</ValidationRule>