force-app/main/default/objects/Report_of_Labor_Code_Violation__c/validationRules/Require_Team_if_Source_is_LETF.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Team_if_Source_is_LETF</fullName>
    <active>false</active>
    <description>Related to 17421 - If Violation source is LETF Call\Email, Require Team #</description>
    <errorConditionFormula>AND(ISPICKVAL( Source__c , "LETF Call/Email"),
  ISNULL(Team__c))</errorConditionFormula>
    <errorDisplayField>Team__c</errorDisplayField>
    <errorMessage>When LETF Call/Email is selected as the Violation Source, you must enter Team #</errorMessage>
</ValidationRule>