force-app/main/default/objects/Report_of_Labor_Code_Violation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DIR_Case__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>