force-app/main/default/objects/Report_of_Labor_Code_Violation__c/listViews/All_Reports_of_Labor_Law_Violations.listView-meta.xml
<ListView>
    <fullName>All_Reports_of_Labor_Law_Violations</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>DIR_Case__c</columns>
    <columns>Date_Signed__c</columns>
    <columns>Taken_By__c</columns>
    <columns>Source__c</columns>
    <columns>Reporting_Party__c</columns>
    <columns>Account__c</columns>
    <columns>Advocate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Reports of Labor Law Violation</label>
</ListView>